[fix]#14467 better button alignment in create subject lightbox

--- a/css/applications/exercizer/_exercizer-specifics.scss
+++ b/css/applications/exercizer/_exercizer-specifics.scss
@@ -391,6 +391,13 @@ body.exercizer{
             }
         }
     }
+
+    .flex-row.justify-center.centered > button.flat-button.five{
+        span{
+            float: none;
+            display: initial;
+        }
+    }
 }
 
 
